--- a/index.html
+++ b/index.html
@@ -151,5 +151,6 @@
 <li><strong>Spell Point Mastery:</strong> You have unlocked the potential of spell points. You gain a pool of spell points equal to your character level x 2, and you can use these points to cast spells instead of using spell slots.</li>
 <li><strong>Super Namekian:</strong> You have achieved the legendary Super Namekian state. Your Strength, Constitution, and Wisdom scores each increase by 2, and your hit point maximum increases by 10.</li>
 <li><strong>True Weapon Master:</strong> You have become a true master of weapons. You gain proficiency in all martial weapons, and your weapon attacks deal an additional 1d6 damage of the weapon's damage type.</li>
+<li><strong>Boon of the Sleeper:</strong> Akin to Croyd Crenson - whenever you take a long rest you will automatically acquire another random Epic Boon while you sleep.  This will include all side-effects mentioned in the Disclaimer above.  You will retain Boon of the Sleeper as well.  If Boon of Sleeper is randomly selected your previous Boon from the night before remains for another day.</li>
 </ul>
 <p>&nbsp;</p>
