--- a/index.html
+++ b/index.html
@@ -4,16 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Announcements</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Announcements</h1>
-    <ul>
-        <li><a href="https://somon760.github.io/Announcements/Boons.html">Boons.html</a></li>
-        <li><a href="https://somon760.github.io/Announcements/Faerun-Map.jpg">Faerun-Map.jpg</a></li>
-        <li><a href="https://somon760.github.io/Announcements/PageThree.html">PageThree.html</a></li>
-        <li><a href="https://somon760.github.io/Announcements/PartFour.html">PartFour.html</a></li>
-        <li><a href="https://somon760.github.io/Announcements/PartOne.html">PartOne.html</a></li>
-        <li><a href="https://somon760.github.io/Announcements/PartTwo.html">PartTwo.html</a></li>
-    </ul>
+    <header>
+        <h1>Campaign Announcements</h1>
+        <nav>
+            <ul>
+                <li><a href="#map">Maps</a></li>
+                <li><a href="#updates">Updates</a></li>
+                <li><a href="#resources">Additional Content</a></li>
+                <li><a href="#narrative">Narrative Summary</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="map">
+            <h2>Map of Campaign Locations</h2>
+            <div class="img-placeholder" id="image-1">Image 1: Placeholder for Campaign Map</div>
+            <p>Explore the key locations and territories involved in the campaign. Each region comes with its own challenges and lore.</p>
+        </section>
+
+        <section id="updates">
+            <h2>Latest Announcements</h2>
+            <div class="img-placeholder" id="image-2">Image 2: Placeholder for Major Event Visual</div>
+            <p>Check out the latest updates on campaign developments, key decisions, and upcoming events. Stay informed!</p>
+        </section>
+
+        <section id="resources">
+            <h2>Additional Content</h2>
+            <div class="img-placeholder" id="image-3">Image 3: Placeholder for Lore Illustration</div>
+            <p>Access expanded lore, background stories, and special character sheets to enhance your understanding of the world.</p>
+        </section>
+
+        <section id="narrative">
+            <h2>Narrative Summary</h2>
+            <div class="img-placeholder" id="image-4">Image 4: Placeholder for Storytelling Scene</div>
+            <p>Relive the key moments from the campaign so far. Discover the twists and turns of the evolving storyline.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Campaign Chronicles. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
