--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section id="map">
             <h2>Map of Campaign Locations</h2>
-            <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map">
+            <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map" style="max-width: 100%; height: auto;">
             <p>Explore the key locations and territories involved in the campaign. Each region comes with its own challenges and lore.</p>
         </section>
 
