--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="#map">Maps</a></li>
-                <li><a href="#updates">Updates</a></li>
-                <li><a href="#resources">Additional Content</a></li>
                 <li><a href="#narrative">Narrative Summary</a></li>
+                <li><a href="#timeline">Timeline</a></li>
+                <li><a href="#appendix">Appendix</a></li>
             </ul>
         </nav>
     </header>
@@ -22,26 +22,87 @@
     <main>
         <section id="map">
             <h2>Map of Campaign Locations</h2>
-            <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map" style="max-width: 100%; height: auto;">
+            <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map" style="max-width: 100%; height: auto; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
             <p>Explore the key locations and territories involved in the campaign. Each region comes with its own challenges and lore.</p>
-        </section>
-
-        <section id="updates">
-            <h2>Latest Announcements</h2>
-            <div class="img-placeholder" id="image-2">Image 2: Placeholder for Major Event Visual</div>
-            <p>Check out the latest updates on campaign developments, key decisions, and upcoming events. Stay informed!</p>
-        </section>
-
-        <section id="resources">
-            <h2>Additional Content</h2>
-            <div class="img-placeholder" id="image-3">Image 3: Placeholder for Lore Illustration</div>
-            <p>Access expanded lore, background stories, and special character sheets to enhance your understanding of the world.</p>
         </section>
 
         <section id="narrative">
             <h2>Narrative Summary</h2>
+            <ul>
+                <li><a href="PartOne.html">Part One</a></li>
+                <li><a href="PartTwo.html">Part Two</a></li>
+                <li><a href="PartThree.html">Part Three</a></li>
+                <li><a href="PartFour.html">Part Four</a></li>
+            </ul>
             <div class="img-placeholder" id="image-4">Image 4: Placeholder for Storytelling Scene</div>
             <p>Relive the key moments from the campaign so far. Discover the twists and turns of the evolving storyline.</p>
+        </section>
+
+        <section id="timeline">
+            <h2>Timeline of Quests Completed</h2>
+            <ol>
+                <li><strong>Fifth-day, 10th of Tarsakh, 1405</strong>
+                    <ul>
+                        <li><strong>Toil and Trouble</strong>: Completed after retrieving the magical cauldron from the Frost Giants and returning it to Easthaven.</li>
+                    </ul>
+                </li>
+                <li><strong>Fifth-day, 24th of Tarsakh, 1405</strong>
+                    <ul>
+                        <li><strong>The White Lady’s Ghost</strong>: The party laid the spirit of the White Lady to rest, discovering the <strong>Ring of Invisibility</strong>.</li>
+                    </ul>
+                </li>
+                <li><strong>Seventh-day, 2nd of Nightal, 1405</strong>
+                    <ul>
+                        <li><strong>The Easthaven Ferry</strong>: Ensured the ferry’s continued operation and resolved the duergar threat in the town.</li>
+                    </ul>
+                </li>
+                <li><strong>Ninth-day, 16th of Nightal, 1405</strong>
+                    <ul>
+                        <li><strong>Foaming Mugs (Bryn Shander)</strong>: Completed this quest, discovering the <strong>Potion of Giant Size</strong> in the smuggling operation.</li>
+                    </ul>
+                </li>
+                <li><strong>Seventh-day, 23rd of Nightal, 1405</strong>
+                    <ul>
+                        <li><strong>A Beautiful Mine (Termalaine)</strong>: Resolved the mine’s corruption and helped the town return to stability.</li>
+                    </ul>
+                </li>
+                <li><strong>Fifth-day, 1st of Hammer, 1406</strong>
+                    <ul>
+                        <li><strong>Investigate the Duergar Conspiracy</strong>: Stopped the duergar plot and thwarted their plans in Icewind Dale.</li>
+                    </ul>
+                </li>
+                <li><strong>Fifth-day, 10th of Hammer, 1406</strong>
+                    <ul>
+                        <li><strong>Arcane Brotherhood</strong>: The party uncovered clues about <strong>Pengu</strong>, <strong>Auril</strong>, and the <strong>Candle of the Dark One</strong> during this storyline.</li>
+                    </ul>
+                </li>
+                <li><strong>Fifth-day, 24th of Hammer, 1406</strong>
+                    <ul>
+                        <li><strong>Frostmaiden’s Followers and Frost Druid Cults</strong>: Defeated corrupted frost druids, uncovering the <strong>Whispering Willow Wood</strong>.</li>
+                    </ul>
+                </li>
+                <li><strong>Eighth-day, 30th of Hammer, 1406</strong>
+                    <ul>
+                        <li><strong>Side Quests to Gather Intel</strong>: Completed several minor quests to gather information about the Frostmaiden’s followers.</li>
+                    </ul>
+                </li>
+                <li><strong>Fifth-day, 10th of Eleasis, 1406</strong>
+                    <ul>
+                        <li><strong>Cave of the Berserkers</strong>: Defeated the <strong>Keraptis Clone</strong> and retrieved <strong>Frostrazor</strong>.</li>
+                    </ul>
+                </li>
+                <li><strong>Fifth-day, 14th of Eleasis, 1406</strong>
+                    <ul>
+                        <li>Returned to <strong>Easthaven</strong> after the <strong>Emperor Penguin</strong> raid. Now preparing to pursue the clues leading to the <strong>Lost Spire of Netheril</strong>.</li>
+                    </ul>
+                </li>
+            </ol>
+        </section>
+
+        <section id="appendix">
+            <h2>Appendix</h2>
+            <div class="img-placeholder" id="image-5">Image 5: Placeholder for Appendix Visual</div>
+            <p>Here you will find references, special notes, and detailed information to supplement the campaign's progress and resources.</p>
         </section>
     </main>
 
