--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 <li><a href="PartThree.html">Part Three</a></li>
                 <li><a href="PartFour.html">Part Four</a></li>
             </ul>
-            <div class="img-placeholder" id="image-4">Image 4: Placeholder for Storytelling Scene</div>
             <p>Relive the key moments from the campaign so far. Discover the twists and turns of the evolving storyline.</p>
         </section>
 
@@ -101,8 +100,107 @@
 
         <section id="appendix">
             <h2>Appendix</h2>
-            <div class="img-placeholder" id="image-5">Image 5: Placeholder for Appendix Visual</div>
             <p>Here you will find references, special notes, and detailed information to supplement the campaign's progress and resources.</p>
+            <div class="content note-editor notes">
+<h3 class="userscript-code-line"><strong>Appendix: Loot and Clues Discovered by Team Biscuit</strong></h3>
+<hr />
+<h4 class="userscript-code-line"><a id="userscript-Section_1_Loot_Found_Throughout_the_Adventure_4"></a><strong>Section 1: Loot Found Throughout the Adventure</strong></h4>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-1_Ring_of_Invisibility_8"></a><strong>1. Ring of Invisibility</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Discovered during <em>The White Lady&rsquo;s Ghost</em> in <strong>Easthaven</strong>.</li>
+<li class="userscript-has-line-data"><strong>Description:</strong> A magical ring that allows the wearer to become invisible at will.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> <strong>Thunderdrum</strong> found this ring hidden among the treasures of the <strong>White Lady</strong> after the party laid her spirit to rest.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-2_Potion_of_Giant_Size_15"></a><strong>2. Potion of Giant Size</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Found during <em>Foaming Mugs</em> in <strong>Bryn Shander</strong>.</li>
+<li class="userscript-has-line-data"><strong>Description:</strong> Temporarily increases the drinker&rsquo;s size and strength, granting giant-like abilities for a short duration.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> Hidden in a dwarven treasure stash beneath a tavern, discovered after clearing out a duergar smuggling operation.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-3_Candle_of_the_Dark_One_Materials_22"></a><strong>3. Candle of the Dark One (Materials)</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Collected from various locations across Icewind Dale.</li>
+<li class="userscript-has-line-data"><strong>Description:</strong> Three <strong>Wicks</strong> and three <strong>Wax of the Dark One</strong>, enough to attempt the creation of the <strong>Candle of the Dark One</strong> three times.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> The party gathered the ingredients over the course of several adventures, including the <strong>Arcane Brotherhood</strong> and <strong>Frostmaiden&rsquo;s Followers</strong> quests.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-4_Shadowkissed_Silk_29"></a><strong>4. Shadowkissed Silk</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Obtained during the <em>Arcane Brotherhood</em> storyline.</li>
+<li class="userscript-has-line-data"><strong>Description:</strong> Used to craft the <strong>Wick of the Dark One</strong>, this rare material is imbued with shadow magic to bind malevolent energies.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> Discovered in the hidden chambers of an <strong>Arcane Brotherhood</strong> stronghold during their quest to find ingredients for the <strong>Candle of the Dark One</strong>.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-5_Whispering_Willow_Wood_36"></a><strong>5. Whispering Willow Wood</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Found during the <em>Frostmaiden&rsquo;s Followers and Frost Druid Cults</em> quest.</li>
+<li class="userscript-has-line-data"><strong>Description:</strong> An enchanted wood used to craft the <strong>Wick of the Dark One</strong>, it resonates with whispers of ancient spirits.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> Retrieved from a sacred grove of corrupted frost druids, who were purged by the party in their quest to stop the Frost Druid cults.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-6_Frostrazor_Legendary_Weapon_43"></a><strong>6. Frostrazor (Legendary Weapon)</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Located in the <strong>Cave of the Berserkers</strong>, wielded by <strong>Grek the Frost Giant</strong>.</li>
+<li class="userscript-has-line-data"><strong>Description:</strong> A legendary weapon with the power to freeze enemies upon striking them, dealing immense cold damage and boosting the wielder&rsquo;s frost-based abilities.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> <strong>Shrop</strong> learned of <strong>Frostrazor&rsquo;s</strong> existence through a vision from <strong>Eldath</strong>, and the party tracked it to the <strong>Cave of the Berserkers</strong>. After defeating <strong>Grek</strong> and the <strong>Keraptis Clone</strong>, <strong>Frostrazor</strong> was claimed by <strong>Shrop</strong>.</li>
+</ul>
+<hr /><hr />
+<h4 class="userscript-code-line"><a id="userscript-Section_2_Clues_Discovered_Along_the_Way_52"></a><strong>Section 2: Clues Discovered Along the Way</strong></h4>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-1_Pengus_Statue_and_Corruption_56"></a><strong>1. Pengu&rsquo;s Statue and Corruption</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Discovered through <strong>Grim&rsquo;s</strong> research into the <strong>Arcane Brotherhood</strong>.</li>
+<li class="userscript-has-line-data"><strong>Clue:</strong> A massive <strong>Emperor Penguin statue</strong> to the north has corrupted all creatures within a 50-mile radius. This entity, <strong>Pengu</strong>, is siphoning magic from <strong>Auril</strong> to send waves of <strong>anti-magic</strong> across the Dale.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> The party first learned of <strong>Pengu</strong> through documents recovered from the <strong>Arcane Brotherhood</strong>, with further evidence encountered during their travels.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-2_The_Candle_of_the_Dark_One_63"></a><strong>2. The Candle of the Dark One</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Learned during the <em>Arcane Brotherhood</em> storyline.</li>
+<li class="userscript-has-line-data"><strong>Clue:</strong> The <strong>Candle of the Dark One</strong> is the only item capable of binding <strong>Pengu</strong> and ending its influence over Icewind Dale. The party now possesses enough materials to make three attempts to craft the candle, but they have not yet attempted the ritual.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> The ritual&rsquo;s details were found in forbidden texts hidden away by the <strong>Arcane Brotherhood</strong>, discovered after the team infiltrated their stronghold.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-3_Connection_Between_Pengu_and_Auril_70"></a><strong>3. Connection Between Pengu and Auril</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Uncovered during the <em>Frostmaiden&rsquo;s Followers and Frost Druid Cults</em> questline.</li>
+<li class="userscript-has-line-data"><strong>Clue:</strong> <strong>Pengu</strong> has been siphoning power from <strong>Auril</strong>, using it to amplify its own abilities. This results in the <strong>anti-magic waves</strong> that frequently disrupt the party&rsquo;s spells.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> After defeating a group of <strong>Frostmaiden&rsquo;s</strong> followers, <strong>Team Biscuit</strong> uncovered sacred texts that hinted at the relationship between <strong>Pengu</strong> and the <strong>Frostmaiden</strong>.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-4_Keraptis_and_the_Weapons_of_White_Plume_Mountain_77"></a><strong>4. Keraptis and the Weapons of White Plume Mountain</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Alluded to through visions and ancient texts.</li>
+<li class="userscript-has-line-data"><strong>Clue:</strong> The <strong>Keraptis</strong> entity, believed to be the original, possesses all four legendary weapons: <strong>Wave</strong>, <strong>Whelm</strong>, <strong>Blackrazor</strong>, and <strong>Frostrazor</strong>. The party believes they may need these weapons to complete the <strong>Candle of the Dark One</strong> ritual and bind <strong>Pengu</strong>.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> <strong>Shrop</strong> and <strong>Terry</strong> received divine clues from their gods, <strong>Eldath</strong> and <strong>Pelor</strong>, hinting at <strong>Keraptis</strong>&rsquo;s presence in the <strong>Cave of the Berserkers</strong>.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-5_Eldaths_Blessing_and_Frostrazor_84"></a><strong>5. Eldath&rsquo;s Blessing and Frostrazor</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Revealed to <strong>Shrop</strong> during his ice-fishing encounter in <strong>Easthaven</strong>.</li>
+<li class="userscript-has-line-data"><strong>Clue:</strong> <strong>Eldath</strong> revealed the location of <strong>Frostrazor</strong> and the presence of <strong>Keraptis</strong> in the <strong>Cave of the Berserkers</strong>.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> <strong>Shrop</strong> received a vision from <strong>Eldath</strong> while ice fishing, guiding the team toward their next destination.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-6_The_Emperor_Penguin_Corruption_91"></a><strong>6. The Emperor Penguin Corruption</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Discovered in Icewind Dale&rsquo;s northern regions.</li>
+<li class="userscript-has-line-data"><strong>Clue:</strong> Creatures around the massive <strong>Emperor Penguin statue</strong> have been corrupted by <strong>Pengu</strong>&rsquo;s dark magic. This corruption has spread over a 50-mile radius, influencing even the land itself.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> The party encountered this corruption firsthand when they investigated strange reports of behavior from local wildlife, eventually tracing it back to the statue during the <em>Arcane Brotherhood</em> questline.</li>
+</ul>
+<hr />
+<h5 class="userscript-code-line"><a id="userscript-7_Lost_Spire_of_Netheril_98"></a><strong>7. Lost Spire of Netheril</strong></h5>
+<ul>
+<li class="userscript-has-line-data"><strong>Location:</strong> Revealed by the <strong>Keraptis Clone</strong> during the battle in the <strong>Cave of the Berserkers</strong>.</li>
+<li class="userscript-has-line-data"><strong>Clue:</strong> Before his death, the <strong>Keraptis Clone</strong> hinted that the remaining legendary weapons were hidden in the <strong>Lost Spire of Netheril</strong>.</li>
+<li class="userscript-has-line-data"><strong>Discovery:</strong> This was revealed by the clone during the final confrontation, pushing the team to find this mysterious location.</li>
+</ul>
+<hr />
+<p class="userscript-has-line-data">This appendix summarizes the loot and clues found by <strong>Team Biscuit</strong> during their adventures in <strong>Icewind Dale</strong>. These treasures and insights will prove crucial in their battle against <strong>Pengu</strong> and <strong>Keraptis</strong>, especially as they prepare to craft the <strong>Candle of the Dark One</strong> and confront the dangers that lie ahead in the <strong>Lost Spire of Netheril</strong>.</p>
+</div>
         </section>
     </main>
 
