--- a/PartOne.html
+++ b/PartOne.html
@@ -1,4 +1,27 @@
-<div class="content note-editor notes">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Part One - The Call to Adventure</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>The Frostbitten Chronicles of Team Biscuit</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html#map">Maps</a></li>
+                <li><a href="index.html#narrative">Narrative Summary</a></li>
+                <li><a href="index.html#timeline">Timeline</a></li>
+                <li><a href="index.html#appendix">Appendix</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Part 1: The Call to Adventure</h2>
+      <div class="content note-editor notes">
 <h3 class="userscript-code-line"><strong>The Frostbitten Chronicles of Team Biscuit</strong></h3>
 <hr />
 <h4 class="userscript-code-line"><a id="userscript-Part_1_The_Call_to_Adventure_4"></a><strong>Part 1: The Call to Adventure</strong></h4>
@@ -60,3 +83,10 @@
 <hr />
 <p class="userscript-has-line-data"><em>This concludes Part 1 of **The Frostbitten Chronicles of Team Biscuit**. In the next part, we will dive deeper into their preparation for crafting the <strong>Candle of the Dark One</strong>, their encounter with the <strong>Arcane Brotherhood</strong>, and the growing tension as they prepare to face the <strong>Cave of the Berserkers</strong>. Stay tuned for more adventures, battles, and of course, more commentary from our beloved Narrator!</em></p>
 </div>
+</main>
+
+    <footer>
+        <p>&copy; 2024 Campaign Chronicles. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
