--- a/PartTwo.html
+++ b/PartTwo.html
@@ -1,4 +1,26 @@
-<h3 class="userscript-code-line"><strong>The Frostbitten Chronicles of Team Biscuit</strong></h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Part Two - The Gathering Storm</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>The Frostbitten Chronicles of Team Biscuit</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html#map">Maps</a></li>
+                <li><a href="index.html#narrative">Narrative Summary</a></li>
+                <li><a href="index.html#timeline">Timeline</a></li>
+                <li><a href="index.html#appendix">Appendix</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Part 2: The Gathering Storm</h2>
 <hr />
 <h4 class="userscript-code-line"><a id="userscript-Part_2_The_Gathering_Storm_4"></a><strong>Part 2: The Gathering Storm</strong></h4>
 <hr />
@@ -50,3 +72,10 @@
 <h4 class="userscript-code-line"><a id="userscript-End_of_Part_2_99"></a><strong>End of Part 2</strong></h4>
 <hr />
 <p class="userscript-has-line-data"><em>This ends Part 2 of <strong>The Frostbitten Chronicles of Team Biscuit</strong>. In the next part, we&rsquo;ll follow the party as they travel to the <strong>Cave of the Berserkers</strong>, face a deadly druid war party, and prepare for the trials within the cave itself. With the components for the <strong>Candle of the Dark One</strong> crafted, but unused, the tension grows as the team moves ever closer to their final confrontation with the dark forces at play.</em></p>
+</main>
+
+    <footer>
+        <p>&copy; 2024 Campaign Chronicles. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
