--- a/PartThree.html
+++ b/PartThree.html
@@ -1,5 +1,28 @@
-<div class="content note-editor notes">
-<h3 class="userscript-code-line"><strong>The Frostbitten Chronicles of Team Biscuit</strong></h3>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Part Three - The Road to the Cave</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>The Frostbitten Chronicles of Team Biscuit</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html#map">Maps</a></li>
+                <li><a href="index.html#narrative">Narrative Summary</a></li>
+                <li><a href="index.html#timeline">Timeline</a></li>
+                <li><a href="index.html#appendix">Appendix</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Part 3: The Road to the Cave</h2>
+      <div class="content note-editor notes">
 <hr />
 <h4 class="userscript-code-line"><a id="userscript-Part_3_The_Road_to_the_Cave_4"></a><strong>Part 3: The Road to the Cave</strong></h4>
 <hr />
@@ -50,3 +73,10 @@
 <hr />
 <p class="userscript-has-line-data">This ends Part 3 of <strong>The Frostbitten Chronicles of Team Biscuit</strong>. In the next part, we&rsquo;ll follow the team as they enter the <strong>Cave of the Berserkers</strong>, battling the <strong>chardalyn berserkers</strong>, <strong>Keraptis </strong>, and <strong>Grek</strong> with the weakened magic at their disposal. The stakes are higher than ever, and the team will need to rely on every skill and tactic they&rsquo;ve learned over the past year to survive.</p>
 </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Campaign Chronicles. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
