--- a/PartFour.html
+++ b/PartFour.html
@@ -1,4 +1,30 @@
-<h3 class="userscript-code-line">The Berserker&rsquo;s End</h3>
+CopilotOct 6, 2024
+
+To create a fancy header for the PartFour.html page that matches the index navigation, use the following HTML structure:
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Part Four - The Berserker’s End</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>The Frostbitten Chronicles of Team Biscuit</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html#map">Maps</a></li>
+                <li><a href="index.html#narrative">Narrative Summary</a></li>
+                <li><a href="index.html#timeline">Timeline</a></li>
+                <li><a href="index.html#appendix">Appendix</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Part 4: The Berserker’s End</h2>
 <p class="userscript-has-line-data">The biting cold of Icewind Dale only seemed to intensify as <strong>Team Biscuit</strong> descended into the <strong>Cave of the Berserkers</strong>. Every gust of wind brought a sense of foreboding, and as the team pressed forward, they could almost hear the whispers of the long-forgotten dwarves who had hollowed out this very cavern in search of riches.</p>
 <h4 class="userscript-code-line"><a id="userscript-Q1_Icy_Path_4"></a><strong>Q1. Icy Path</strong></h4>
 <p class="userscript-has-line-data">The elevated causeway, slick with ice, was the first challenge. Snow crunched underfoot, and <strong>Thunderdrum</strong>, always alert, whispered, &ldquo;There&rsquo;s movement ahead.&rdquo;</p>
@@ -45,3 +71,10 @@
 <h3 class="userscript-code-line"><a id="userscript-The_Road_Ahead_84"></a>The Road Ahead</h3>
 <p class="userscript-has-line-data"><em>Revitalized with new hope, <strong>Team Biscuit</strong> gathered around the map. The <strong>Lost Spire of Netheril</strong> was their next destination, and the key to stopping <strong>Pengu</strong> and retrieving the remaining legendary weapons lay within its walls. Though the journey ahead was fraught with danger and uncertainty, the team was ready.</em></p>
 <p class="userscript-has-line-data"><em>The storm would pass, and when it did, they would be ready to face the perils of Icewind Dale once more.</em></p>
+</main>
+
+    <footer>
+        <p>&copy; 2024 Campaign Chronicles. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
