--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </section>
 
         <section id="timeline">
+            <div><strong>Team Biscuit has spent a total of 491 days in the North, from the 10th of Tarsakh, 1405, to the 14th of Eleasis, 1406.</strong></div><br>
             <h2>Timeline of Quests Completed</h2>
             <ol>
                 <li><strong>Fifth-day, 10th of Tarsakh, 1405</strong>
