--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
         </section>
 
         <section id="narrative">
-            <h2>Narrative Summary</h2>
-            <ul>
-                <li><a href="PartOne.html">Part One</a></li>
-                <li><a href="PartTwo.html">Part Two</a></li>
-                <li><a href="PartThree.html">Part Three</a></li>
-                <li><a href="PartFour.html">Part Four</a></li>
-            </ul>
+        <h2>Narrative Summary</h2>
+        <ul>
+            <li><a href="PartOne.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part One: The Arrival in Icewind Dale</a></li>
+            <li><a href="PartTwo.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part Two: The Quest for the Cauldron</a></li>
+            <li><a href="PartThree.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part Three: The Rise of the Duergar</a></li>
+            <li><a href="PartFour.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part Four: Battle in the Berserker Cave</a></li>
+        </ul>
+
             <p>Relive the key moments from the campaign so far. Discover the twists and turns of the evolving storyline.</p>
         </section>
 
