--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     <main>
         <section id="map">
             <h2>Map of Campaign Locations</h2>
-            <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map" style="max-width: 100%; height: auto; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+            <a href="https://somon760.github.io/Announcements/RegionMap.png" target="_blank">
+                <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map" style="width: 25%; height: auto; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+            </a>
             <p>Explore the key locations and territories involved in the campaign. Each region comes with its own challenges and lore.</p>
         </section>
+
 
         <section id="narrative">
         <p>Relive the key moments from the campaign so far. Discover the twists and turns of the evolving storyline.</p>
