Add Vellynne's Journal and update index.html links

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <li><a href="PartTwo.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part Two: The Quest for the Cauldron</a></li>
             <li><a href="PartThree.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part Three: The Rise of the Duergar</a></li>
             <li><a href="PartFour.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part Four: Battle in the Berserker Cave</a></li>
-                            <hr>
-                <li><a href="#Vellynne">Vellynne Harpells Journal</a></li>
-                <li><a href="#Kereptas">The Tome of Kereptas</a></li>
+            <br><hr><br>
+            <li><a href="Vellynne.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Vellynne Harpells Journal</a></li>
+            <li><a href="Kereptas.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">The Tome of Kereptas</a></li>
         </ul>
 
             
