Update index.html to enhance link accessibility and improve styling

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <main>
         <section id="map">
             <h2>Map of Campaign Locations</h2>
-            <a href="https://somon760.github.io/Announcements/RegionMap.png" target="_blank">
-                <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map" style="width: 25%; height: auto; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+            <a href="https://somon760.github.io/Announcements/RegionMap.png" target="_blank" rel="noopener">
+                <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map" class="region-map">
             </a>
             <p>Explore the key locations and territories involved in the campaign. Each region comes with its own challenges and lore.</p>
         </section>
@@ -33,13 +33,15 @@
         <p>Relive the key moments from the campaign so far. Discover the twists and turns of the evolving storyline.</p>
         <h2>Narrative Summary</h2>
         <ul>
-            <li><a href="PartOne.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part One: The Arrival in Icewind Dale</a></li>
-            <li><a href="PartTwo.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part Two: The Quest for the Cauldron</a></li>
-            <li><a href="PartThree.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part Three: The Rise of the Duergar</a></li>
-            <li><a href="PartFour.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Part Four: Battle in the Berserker Cave</a></li>
-            <br><hr><br>
-            <li><a href="Vellynne.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">Vellynne Harpells Journal</a></li>
-            <li><a href="Kereptas.html" style="color: #0056b3; text-decoration: none; font-weight: bold;">The Tome of Kereptas</a></li>
+            <li><a href="PartOne.html" class="announcement-link">Part One: The Arrival in Icewind Dale</a></li>
+            <li><a href="PartTwo.html" class="announcement-link">Part Two: The Quest for the Cauldron</a></li>
+            <li><a href="PartThree.html" class="announcement-link">Part Three: The Rise of the Duergar</a></li>
+            <li><a href="PartFour.html" class="announcement-link">Part Four: Battle in the Berserker Cave</a></li>
+        </ul>
+        <br><hr><br>
+        <ul>
+            <li><a href="Vellynne.html" class="announcement-link">Vellynne Harpells Journal</a></li>
+            <li><a href="Kereptas.html" class="announcement-link">The Tome of Kereptas</a></li>
         </ul>
 
             
