Add headers, navigation, and footers to Kereptas.html and Vellynne.html; link to external stylesheet

--- a/Vellynne.html
+++ b/Vellynne.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vellynne's Journal</title>
-    <style>
+    <link rel="stylesheet" href="styles.css">
+       <style>
         body {
             background-color: #2c2f33;
             color: #eaeaea;
@@ -51,6 +52,20 @@
     </style>
 </head>
 <body>
+    <header>
+        <h1>Vellynne's Journal</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#map">Maps</a></li>
+                <li><a href="index.html#narrative">Narrative Summary</a></li>
+                <li><a href="index.html#timeline">Timeline</a></li>
+                <li><a href="index.html#appendix">Appendix</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
     <div class="journal-container">
         <div class="journal-cover">
             <img src="Vellynne.webp" alt="Vellynne's Journal Cover">
@@ -141,5 +156,10 @@
             </div>
         </div>
     </div>
+</main>
+
+    <footer>
+        <p>&copy; 2024 Campaign Chronicles. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
