--- a/Kereptas.html
+++ b/Kereptas.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Tome of Kereptas</title>
-    <style>
+    <link rel="stylesheet" href="styles.css">
+
+        <style>
         body {
             background-color: #1e1e1e;
             color: #d1d1d1;
@@ -55,6 +57,21 @@
     </style>
 </head>
 <body>
+    <header>
+        <h1>The Tome of Kereptas</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#map">Maps</a></li>
+                <li><a href="index.html#narrative">Narrative Summary</a></li>
+                <li><a href="index.html#timeline">Timeline</a></li>
+                <li><a href="index.html#appendix">Appendix</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
     <div class="journal-container">
         <div class="journal-cover">
             <img src="Kereptas.webp" alt="The Tome of Kereptas Cover">
@@ -160,5 +177,11 @@
             </div>
         </div>
     </div>
+</main>
+
+    <footer>
+        <p>&copy; 2024 Campaign Chronicles. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
+
