--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Announcements</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .thumbnail {
+            width: 150px; /* Adjust the size as needed */
+            cursor: pointer;
+        }
+        .full-size {
+            display: none;
+            width: 100%; /* Adjust the size as needed */
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -22,9 +32,8 @@
     <main>
         <section id="map">
             <h2>Map of Campaign Locations</h2>
-            <a href="https://somon760.github.io/Announcements/RegionMap.png" target="_blank" rel="noopener">
-                <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map" class="region-map">
-            </a>
+            <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map" class="thumbnail" id="thumbnail">
+            <img src="https://somon760.github.io/Announcements/RegionMap.png" alt="Region Map" class="full-size" id="fullSizeImage">
             <p>Explore the key locations and territories involved in the campaign. Each region comes with its own challenges and lore.</p>
         </section>
 
@@ -48,7 +57,7 @@
         </section>
 
         <section id="timeline">
-            <div><strong>Team Biscuit has spent a total of 491 days in the North, from the 10th of Tarsakh, 1405, to the 14th of Eleasis, 1406.</strong></div><br>
+            <div><strong>Team Biscuit has spent a total of 504 days in the North, from the 10th of Tarsakh, 1405, to the 27th of Eleasis, 1406.</strong></div><br>
             <h2>Timeline of Quests Completed</h2>
             <ol>
                 <li><strong>Fifth-day, 10th of Tarsakh, 1405</strong>
@@ -218,5 +227,12 @@
     <footer>
         <p>&copy; 2024 Campaign Chronicles. All Rights Reserved.</p>
     </footer>
+
+    <script>
+        document.getElementById('thumbnail').addEventListener('click', function() {
+            document.getElementById('thumbnail').style.display = 'none';
+            document.getElementById('fullSizeImage').style.display = 'block';
+        });
+    </script>
 </body>
 </html>
