Update navigation links in multiple HTML files for consistency

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Campaign Announcements</h1>
         <nav>
             <ul>
-                <li><a href="#map">Maps</a></li>
+                <li><a href="">Maps</a></li>
                 <li><a href="#narrative">Narrative Summary</a></li>
                 <li><a href="#timeline">Timeline</a></li>
                 <li><a href="#appendix">Appendix</a></li>
