--- a/PartThree.html
+++ b/PartThree.html
@@ -12,7 +12,7 @@
         <h1>The Frostbitten Chronicles of Team Biscuit</h1>
         <nav>
             <ul>
-                <li><a href="index.html#map">Maps</a></li>
+                <li><a href="index.html">Maps</a></li>
                 <li><a href="index.html#narrative">Narrative Summary</a></li>
                 <li><a href="index.html#timeline">Timeline</a></li>
                 <li><a href="index.html#appendix">Appendix</a></li>
