--- a/Vellynne.html
+++ b/Vellynne.html
@@ -56,8 +56,7 @@
         <h1>Vellynne's Journal</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#map">Maps</a></li>
+                <li><a href="index.html">Maps</a></li>
                 <li><a href="index.html#narrative">Narrative Summary</a></li>
                 <li><a href="index.html#timeline">Timeline</a></li>
                 <li><a href="index.html#appendix">Appendix</a></li>
