--- a/index.html
+++ b/index.html
@@ -57,65 +57,85 @@
         </section>
 
         <section id="timeline">
-            <div><strong>Team Biscuit has spent a total of 504 days in the North, from the 10th of Tarsakh, 1405, to the 27th of Eleasis, 1406.</strong></div><br>
-            <h2>Timeline of Quests Completed</h2>
-            <ol>
-                <li><strong>Fifth-day, 10th of Tarsakh, 1405</strong>
-                    <ul>
-                        <li><strong>Toil and Trouble</strong>: Completed after retrieving the magical cauldron from the Frost Giants and returning it to Easthaven.</li>
-                    </ul>
-                </li>
-                <li><strong>Fifth-day, 24th of Tarsakh, 1405</strong>
-                    <ul>
-                        <li><strong>The White Lady’s Ghost</strong>: The party laid the spirit of the White Lady to rest, discovering the <strong>Ring of Invisibility</strong>.</li>
-                    </ul>
-                </li>
-                <li><strong>Seventh-day, 2nd of Nightal, 1405</strong>
-                    <ul>
-                        <li><strong>The Easthaven Ferry</strong>: Ensured the ferry’s continued operation and resolved the duergar threat in the town.</li>
-                    </ul>
-                </li>
-                <li><strong>Ninth-day, 16th of Nightal, 1405</strong>
-                    <ul>
-                        <li><strong>Foaming Mugs (Bryn Shander)</strong>: Completed this quest, discovering the <strong>Potion of Giant Size</strong> in the smuggling operation.</li>
-                    </ul>
-                </li>
-                <li><strong>Seventh-day, 23rd of Nightal, 1405</strong>
-                    <ul>
-                        <li><strong>A Beautiful Mine (Termalaine)</strong>: Resolved the mine’s corruption and helped the town return to stability.</li>
-                    </ul>
-                </li>
-                <li><strong>Fifth-day, 1st of Hammer, 1406</strong>
-                    <ul>
-                        <li><strong>Investigate the Duergar Conspiracy</strong>: Stopped the duergar plot and thwarted their plans in Icewind Dale.</li>
-                    </ul>
-                </li>
-                <li><strong>Fifth-day, 10th of Hammer, 1406</strong>
-                    <ul>
-                        <li><strong>Arcane Brotherhood</strong>: The party uncovered clues about <strong>Pengu</strong>, <strong>Auril</strong>, and the <strong>Candle of the Dark One</strong> during this storyline.</li>
-                    </ul>
-                </li>
-                <li><strong>Fifth-day, 24th of Hammer, 1406</strong>
-                    <ul>
-                        <li><strong>Frostmaiden’s Followers and Frost Druid Cults</strong>: Defeated corrupted frost druids, uncovering the <strong>Whispering Willow Wood</strong>.</li>
-                    </ul>
-                </li>
-                <li><strong>Eighth-day, 30th of Hammer, 1406</strong>
-                    <ul>
-                        <li><strong>Side Quests to Gather Intel</strong>: Completed several minor quests to gather information about the Frostmaiden’s followers.</li>
-                    </ul>
-                </li>
-                <li><strong>Fifth-day, 10th of Eleasis, 1406</strong>
-                    <ul>
-                        <li><strong>Cave of the Berserkers</strong>: Defeated the <strong>Keraptis Clone</strong> and retrieved <strong>Frostrazor</strong>.</li>
-                    </ul>
-                </li>
-                <li><strong>Fifth-day, 14th of Eleasis, 1406</strong>
-                    <ul>
-                        <li>Returned to <strong>Easthaven</strong> after the <strong>Emperor Penguin</strong> raid. Now preparing to pursue the clues leading to the <strong>Lost Spire of Netheril</strong>.</li>
-                    </ul>
-                </li>
-            </ol>
+            <div><strong class="highlight-text">Team Biscuit has spent a total of 504 days in the North, from the 10th of Tarsakh, 1405, to the 27th of Eleasis, 1406.</strong></div><br>
+            
+        <div class="journal-entry">
+            <div class="journal-entry-title">Timeline of Quests Completed<hr></div>
+            <div class="journal-entry-content">
+                <ol>
+                    <li><strong>Third-day, 27th of Eleasis, 1406</strong>
+                        <ul>
+                            <li>Arrived at Bryn Shander, to find it in ruins. Horde has been sighted moving off into the distance, ever northward.</li>
+                        </ul>
+                    </li>
+                    <li><strong>First-day, 25th of Eleasis, 1406</strong>
+                        <ul>
+                            <li>Return to Easthaven after successfully defeating Vellynne and the Twisted Darlings. Still no closer to Pengu, and no clues.  Legendary Weapons recovered!</li>
+                        </ul>
+                    </li>
+                    <li><strong>Eight-day, 17th of Eleasis, 1406</strong>
+                        <ul>
+                            <li>Party finally arrves at The Lost Spire, and begins their descent into the deep ice below the black mountain.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Fifth-day, 14th of Eleasis, 1406</strong>
+                        <ul>
+                            <li>Returned to <strong>Easthaven</strong> after the <strong>Emperor Penguin</strong> raid. Now preparing to pursue the clues leading to the <strong>Lost Spire of Netheril</strong>.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Fifth-day, 10th of Eleasis, 1406</strong>
+                        <ul>
+                            <li><strong>Cave of the Berserkers</strong>: Defeated the <strong>Keraptis Clone</strong> and retrieved <strong>Frostrazor</strong>.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Eighth-day, 30th of Hammer, 1406</strong>
+                        <ul>
+                            <li><strong>Side Quests to Gather Intel</strong>: Completed several minor quests to gather information about the Frostmaiden’s followers.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Fifth-day, 24th of Hammer, 1406</strong>
+                        <ul>
+                            <li><strong>Frostmaiden’s Followers and Frost Druid Cults</strong>: Defeated corrupted frost druids, uncovering the <strong>Whispering Willow Wood</strong>.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Fifth-day, 10th of Hammer, 1406</strong>
+                        <ul>
+                            <li><strong>Arcane Brotherhood</strong>: The party uncovered clues about <strong>Pengu</strong>, <strong>Auril</strong>, and the <strong>Candle of the Dark One</strong> during this storyline.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Fifth-day, 1st of Hammer, 1406</strong>
+                        <ul>
+                            <li><strong>Investigate the Duergar Conspiracy</strong>: Stopped the duergar plot and thwarted their plans in Icewind Dale.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Seventh-day, 23rd of Nightal, 1405</strong>
+                        <ul>
+                            <li><strong>A Beautiful Mine (Termalaine)</strong>: Resolved the mine’s corruption and helped the town return to stability.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Ninth-day, 16th of Nightal, 1405</strong>
+                        <ul>
+                            <li><strong>Foaming Mugs (Bryn Shander)</strong>: Completed this quest, discovering the <strong>Potion of Giant Size</strong> in the smuggling operation.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Seventh-day, 2nd of Nightal, 1405</strong>
+                        <ul>
+                            <li><strong>The Easthaven Ferry</strong>: Ensured the ferry’s continued operation and resolved the duergar threat in the town.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Fifth-day, 24th of Tarsakh, 1405</strong>
+                        <ul>
+                            <li><strong>The White Lady’s Ghost</strong>: The party laid the spirit of the White Lady to rest, discovering the <strong>Ring of Invisibility</strong>.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Fifth-day, 10th of Tarsakh, 1405</strong>
+                        <ul>
+                            <li><strong>Toil and Trouble</strong>: Completed after retrieving the magical cauldron from the Frost Giants and returning it to Easthaven.</li>
+                        </ul>
+                    </li>
+                </ol>
+            </div>
+        </div>
         </section>
 
         <section id="appendix">
